--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -70,7 +70,7 @@
   <div class = "container">
 
         <div class="jumbotron">
-              <img src="images/1.JPG" alt="picture">
+              <img src="../images/1.JPG" alt="picture">
           <h2> A domestic abuse organisation for African heritage people</h2>
           <h4 class="text-justify"> You may ask why we need a domestic abuse organisation specfically for African heritage people. The answer is simple. The current system does not understand or cater for the needs of this community. </h4>
 
