--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -21,9 +21,8 @@
 <body>
   <div id="our-work">
 
-	<body data-spy="scroll" data-target="#category">
- <div class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
-   <div class="container">
+	 <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
+  <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
         <span class="icon-bar"></span>
@@ -31,49 +30,64 @@
         <span class="icon-bar"></span>
       </button>
       <a href="" class="navbar-brand"> LOGO here</a>
-    </div> <!--Navbar header-->
+    </div>
 
-
-    <!--  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
-     <ul class="nav navbar-nav nav " >
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="pages/our_work.html">Our work</a></li>
-          <li><a href="pages/abuse.html">What is abuse</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Useful links</a></li>
-        </ul>
-        <li><a href="pages/help.html"> How we can help you </a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How you can help us <span class="caret"></span></a>
+      <ul class="nav navbar-nav" >
+        <li class = "dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="pages/shop.html"> Shop </a></li>
-            <li><a href="pages/donations.html"> Donate </a></li>
-            <li><a href="pages/volunteer.html"> Volunteer </a></li>
+            <li><a href="../pages/our_work.html">Our work</a></li>
+            <li><a href="../pages/our_team.html">Our team</a></li>
+            <li><a href="../pages/abuse.html">What is abuse?</a></li>
+            <li><a href="#">Page 4</a></li>
           </ul>
-          <li><a href="pages/news.html">News</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
-        </ul>
-      </li>
-    </ul>
+        </li>
+        <li class = "dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
+
+            <ul class = "dropdown-menu">  
+              <li><a href="../pages/advice.html"> Advice </a></li>
+              <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
+
+            </ul>
+          </li>
+
+
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
+            <ul class = "dropdown-menu">
+              <li><a href="../pages/donations.html"> Donate </a></li>
+              <li><a href="../pages/volunteer.html"> Volunteer </a></li>
+              <li><a href="../pages/shop.html"> Shop </a></li>
+              </ul>
+          </li>
+
+        <li><a href="../pages/news.html">News</a></li>
+      </ul>  
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="../pages/contact.html">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+
+      </ul>
+    </div>
   </div>
-  </div> <!--End Container -->
-   <button id="escape" class="escape">QUICKLY LEAVE THIS WEBSITE</button>
-  </div>
+</div>
 
 
 
+
+
+
+
+<div class = "jumbotron">
   <div class = "container">
+        
+    <img class = "img-responsive" src="../images/3.JPG" alt="picture">
+        <h2> A domestic abuse organisation for African heritage people</h2>
+        <h4 class="text-justify"> You may ask why we need a domestic abuse organisation specfically for African heritage people. The answer is simple. The current system does not understand or cater for the needs of this community. </h4>
 
-        <div class="jumbotron">
-              <img src="../images/1.JPG" alt="picture">
-          <h2> A domestic abuse organisation for African heritage people</h2>
-          <h4 class="text-justify"> You may ask why we need a domestic abuse organisation specfically for African heritage people. The answer is simple. The current system does not understand or cater for the needs of this community. </h4>
-
+  </div>
 </div>
 
 
