--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="pages/our_work.html">Our work</a></li>
+            <li><a href="pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="pages/our_team.html">Our team</a></li>
             <li><a href="pages/abuse.html">What is abuse?</a></li>
             <li><a href="#">Page 4</a></li>
