--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -90,67 +90,49 @@
   </div>
 </div>
 
-
+<div class="container">
 <div class="main-copy">
-<h2> Why is this needed?</h2>
-<p class="text-justify">There are many UK domestic abuse/violence organisations, but our experience has shown that without understanding and respect for the history, culture and specific needs of African and Caribbean survivors of domestic abuse it is not possible to provide the help and support that's needed.</p>
+    <h2> Why is this needed?</h2>
+    <p class="text-justify">There are many UK domestic abuse/violence organisations, but our experience has shown that without understanding and respect for the history, culture and specific needs of African and Caribbean survivors of domestic abuse it is not possible to provide the help and support that's needed.</p>
 
-<p class="text-justify"> We know many women have had negative experiences when trying to get help. We know women who have felt humiliated. We know women who have felt that the police aren't taking them seriously because they don't have a 'red mark' on their dark skin when they were hit in the face.</p>
-
-
-<p class="text-justify">This is no doubt hard for some people to read, understand or believe. Unfortunately, it does not make it any less true. If it's difficult for you to hear, imagine how difficult it is to live it. </p>
-<h2>Our solution</h2>
-<hp> To create our own Sistah Space, a place where African heritage people can see themselves reflected. </p>
-<p class="text-justify">  Nobody can understand the needs of African heritage women, better than African heritage women do. Only we understand that black women have to report domestic abuse many more times than their white counterparts, before (if ever) getting help. Only we truly know the journey and prejudices and racism we have endured over the years that make it extremely difficult to go to others for help. </p>
+    <p class="text-justify"> We know many women have had negative experiences when trying to get help. We know women who have felt humiliated. We know women who have felt that the police aren't taking them seriously because they don't have a 'red mark' on their dark skin when they were hit in the face.</p>
 
 
-
-<h2>Why Sistah Space is best placed to do this</h2>
-
-<p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. Ngozi Headley-Fulani (founder) uses this example to explain why this is so important.</p>
-<p class="text-justify">"I have re-coined the phrase 'Honour' based violence to 'Dishonour' based violence to describe the feelings in the grassroots community. This is because there is some similarity to the fact that in certain communities, the worst thing you can do is report a black man to the police. The grassroots/Rasta community in particular, for historical reasons, are not in favour of that. We are often taught from a young age to keep personal things private and within the family. </p>
-<p class="text-justify">"We're afraid of what will happen to the perpetrator if we report him. Just because we're experiencing turbulence in the relationship, it doesn't mean we want him hurt, or dead. We only want the abuse to stop. The history of black men and the police is not a good one. We fear reporting our brotha to the police." </p>
-
-
-<h3>We understand the day-to-day needs of African heritage women</h3>
-<p class="text-justify">When a black woman washes her hair, it not usually a 10 minute 'wash and go' process that you might find with more manageable European or Asian hair types. Generally speaking, our natural hair texture means that it takes an extended time to wash and dry. If it is unprocessed, our hair will shrink and revert and will have to be plaited, combed or otherwise styled before we can go out. If it's processed or weave, it still has to undergo some type of process before we can 'present'. The wash plait and style process can take hours and usually takes careful planning. </p>
-
-<p class="text-justify">Our skin also takes special treatment and care. After bathing, we must apply special creams or oils to our skins to avoid the dry and 'ashy' appearance. These are day-to- day routines for us, but most people outside our culture don't appear to know this.</p>
-
-<p class="text-justify">What has this to do with domestic abuse? Well, plenty. If you don't know this basic fact about African heritage woman, what do you know? How can you cater for us when you don't know the first thing about us?</p>
-
-<p class="text-justify">How do you think this would impact on an African heritage woman who has been moved suddenly to a refuge. Where she has not had time to go through the routine that allows her to be presentable and doesn't have access to the products and items she needs to manage her hair and skin. Where the very nice people at the refuge/centre/police station/rape centre/hospital don't understand why she can't present yet. </p>
-
-<p class="text-justify"> This is additional trauma on top of what happened to her.</p>
-
-
-<h3>We understand why there is a lack of faith in the system </h3>
-
-<p class="text-justify">Can other organisations deal with the fact that many African heritage people do not have faith in the 'system' for a multitude of reasons including the history of police brutality, slavery and all the other things 'we don't like to talk about'. Many of us are the descendents of those who came here to do the menial jobs that other's didn't want to do. Our parents heard the familiar words and saw in many a window, 'No Irish, No blacks, No dogs'.</p>
-
-<p class="text-justify">We remain victims of blatant racism and unconscious bias in institutions where racism is inherent. We do know that things are changing for the better, but in the meantime, people are dying and still refusing to report to institutions because of fear.</p>
+    <p class="text-justify">This is no doubt hard for some people to read, understand or believe. Unfortunately, it does not make it any less true. If it's difficult for you to hear, imagine how difficult it is to live it. </p>
+    <h2>Our solution</h2>
+    <p> To create our own Sistah Space, a place where African heritage people can see themselves reflected. </p>
+    <p class="text-justify">  Nobody can understand the needs of African heritage women, better than African heritage women do. Only we understand that black women have to report domestic abuse many more times than their white counterparts, before (if ever) getting help. Only we truly know the journey and prejudices and racism we have endured over the years that make it extremely difficult to go to others for help. </p>
 
 
 
-<h1>The history</h1>
-<p class="text-justify">Many UK born or raised African heritage people grew up in time when only white men were teachers, head teachers, vicars, bank managers, police. It was almost unheard of for an African heritage woman or man to be a marriage registrar or hold any other similar role. All high profile jobs were predominantly done by white men. In contrast, African heritage people were doing all the menial jobs, like cleaning, factory work and in particular, railway and London Transport jobs.</p>
+    <h2>Why Sistah Space is best placed to do this</h2>
 
-<p class="text-justify">The well-known phrase, 'No blacks, No Irish, No dogs' was in many windows in 1950/60s Britain. Many of the children of that time are now adults and although much has changed in terms of work opportunities, equality for all has not been achieved.</p>
+    <p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. Ngozi Headley-Fulani (founder) uses this example to explain why this is so important.</p>
+    <p class="text-justify">"I have re-coined the phrase 'Honour' based violence to 'Dishonour' based violence to describe the feelings in the grassroots community. This is because there is some similarity to the fact that in certain communities, the worst thing you can do is report a black man to the police. The grassroots/Rasta community in particular, for historical reasons, are not in favour of that. We are often taught from a young age to keep personal things private and within the family. </p>
+    <p class="text-justify">"We're afraid of what will happen to the perpetrator if we report him. Just because we're experiencing turbulence in the relationship, it doesn't mean we want him hurt, or dead. We only want the abuse to stop. The history of black men and the police is not a good one. We fear reporting our brotha to the police." </p>
 
-<p class="text-justify">Back then, in addition to this, there was not much support for any person suffering domestic abuse. It was very much considered a 'domestic' affair to be sorted out by the people involved. This did not bode well for women in particular, African heritage women even less so.</p>
 
-<p class="text-justify">The repercussions of that era are still very much felt today, with many African heritage victims of abuse, extremely reluctant to report crime to the police or other agencies. The reasons given are many and include:</p>
+    <h3>We understand the day-to-day needs of African heritage women</h3>
+    <p class="text-justify">When a black woman washes her hair, it not usually a 10 minute 'wash and go' process that you might find with more manageable European or Asian hair types. Generally speaking, our natural hair texture means that it takes an extended time to wash and dry. If it is unprocessed, our hair will shrink and revert and will have to be plaited, combed or otherwise styled before we can go out. If it's processed or weave, it still has to undergo some type of process before we can 'present'. The wash plait and style process can take hours and usually takes careful planning. </p>
 
-<ul>
-  <li>Discrimination </li>
-  <li>Not being taken seriously by police </li>
-  <li>Not trusting Social Service will not blame them and take away their children</li>
-  <li>Not wanting the African heritage man to be beaten or killed by police (a very real fear to this day. Although he might be considered abusive, the survivor still had concerns for their safety)</li>
-  <li>Unresolved issues around displacement and slavery.</li>
-  <li>Services not understanding African and Caribbean culture, and therefore not suitable for African heritage survivors.</li>
-  <li>Insufficient adequate resources or places that reflect their cultural heritage.</li>
-</ul>
-</p>
+    <p class="text-justify">Our skin also takes special treatment and care. After bathing, we must apply special creams or oils to our skins to avoid the dry and 'ashy' appearance. These are day-to- day routines for us, but most people outside our culture don't appear to know this.</p>
+
+    <p class="text-justify">What has this to do with domestic abuse? Well, plenty. If you don't know this basic fact about African heritage woman, what do you know? How can you cater for us when you don't know the first thing about us?</p>
+
+    <p class="text-justify">How do you think this would impact on an African heritage woman who has been moved suddenly to a refuge. Where she has not had time to go through the routine that allows her to be presentable and doesn't have access to the products and items she needs to manage her hair and skin. Where the very nice people at the refuge/centre/police station/rape centre/hospital don't understand why she can't present yet. </p>
+
+    <p class="text-justify"> This is additional trauma on top of what happened to her.</p>
+
+
+    <h3>We understand why there is a lack of faith in the system </h3>
+
+    <p class="text-justify">Can other organisations deal with the fact that many African heritage people do not have faith in the 'system' for a multitude of reasons including the history of police brutality, slavery and all the other things 'we don't like to talk about'. Many of us are the descendents of those who came here to do the menial jobs that other's didn't want to do. Our parents heard the familiar words and saw in many a window, 'No Irish, No blacks, No dogs'.</p>
+
+    <p class="text-justify">We remain victims of blatant racism and unconscious bias in institutions where racism is inherent. We do know that things are changing for the better, but in the meantime, people are dying and still refusing to report to institutions because of fear.</p>
+
+</div>
+
+    
 
 
 </div>
