Why Sistah Space fixed

--- a/pages/history.html
+++ b/pages/history.html
@@ -81,9 +81,9 @@
 <div class = "jumbotron">
   <div class = "container">
         
-    <img class = "img-responsive" src="../images/3.JPG" alt="picture">
-        <h2> A domestic abuse organisation for African heritage people</h2>
-        <h4 class="text-justify"> You may ask why we need a domestic abuse organisation specfically for African heritage people. The answer is simple. The current system does not understand or cater for the needs of this community. </h4>
+    <img class = "img-responsive" src="../images/2.JPG" alt="picture">
+        <h2 class = "text-center"> Title</h2>
+        <h4 class="text-center"> Subtitle. </h4>
 
   </div>
 </div>
