--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
 
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
-
-
-  <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:400,500italic' rel='stylesheet' type='text/css'>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
    <link rel="stylesheet" type="text/css" href="../css/css.css"/>
-  <title > Our Work </title>
+  <title > Why Sistah Space? </title>
 
 
 
 </head>
 
 <body>
-  <div id="our-work">
 
-	 <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="" class="navbar-brand"> LOGO here</a>
-    </div>
+	<div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button> 
+        <a href="../index.html" class="navbar-brand"> Home</a>
+      </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav" >
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="../pages/our_work.html">Our work</a></li>
+            <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/our_team.html">Our team</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="#">Page 4</a></li>
+            <li><a href="../pages/history.html">History</a></li>
           </ul>
         </li>
         <li class = "dropdown">
@@ -52,8 +48,6 @@
 
             </ul>
           </li>
-
-
 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
@@ -76,57 +70,48 @@
 
 
 
-
-
-
-
 <div class = "jumbotron">
   <div class = "container">
         
     <img class = "img-responsive" src="../images/3.JPG" alt="picture">
-        <h2> A domestic abuse organisation for African heritage people</h2>
-        <h4 class="text-justify"> You may ask why we need a domestic abuse organisation specfically for African heritage people. The answer is simple. The current system does not understand or cater for the needs of this community. </h4>
-
+      <div class ="text-area">
+        </br>
+        <h2 class = " text-center"> A domestic abuse organisation for African heritage people</h2> <hr>
+        <h4 class=" text-center"> You may ask why we need a domestic abuse organisation specfically for African heritage people. </h4> <h4 class ="text-center">The answer is simple.</h4> <h4 class = "text-center"> The current system does not understand or cater for the needs of this community. </h4></br>
+      </div>
   </div>
 </div>
 
 <div class="container">
-<div class="main-copy">
+  <div class="main-copy">
     <h2> Why is this needed?</h2>
     <p class="text-justify">There are many UK domestic abuse/violence organisations, but our experience has shown that without understanding and respect for the history, culture and specific needs of African and Caribbean survivors of domestic abuse it is not possible to provide the help and support that's needed.</p>
-
     <p class="text-justify"> We know many women have had negative experiences when trying to get help. We know women who have felt humiliated. We know women who have felt that the police aren't taking them seriously because they don't have a 'red mark' on their dark skin when they were hit in the face.</p>
-
-
     <p class="text-justify">This is no doubt hard for some people to read, understand or believe. Unfortunately, it does not make it any less true. If it's difficult for you to hear, imagine how difficult it is to live it. </p>
+     <hr>
+
     <h2>Our solution</h2>
     <p> To create our own Sistah Space, a place where African heritage people can see themselves reflected. </p>
     <p class="text-justify">  Nobody can understand the needs of African heritage women, better than African heritage women do. Only we understand that black women have to report domestic abuse many more times than their white counterparts, before (if ever) getting help. Only we truly know the journey and prejudices and racism we have endured over the years that make it extremely difficult to go to others for help. </p>
+    <hr>
 
-
-
-    <h2>Why Sistah Space is best placed to do this</h2>
-
+    <h2>Why is Sistah Space best placed to do this?</h2>
     <p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. Ngozi Headley-Fulani (founder) uses this example to explain why this is so important.</p>
-    <p class="text-justify">"I have re-coined the phrase 'Honour' based violence to 'Dishonour' based violence to describe the feelings in the grassroots community. This is because there is some similarity to the fact that in certain communities, the worst thing you can do is report a black man to the police. The grassroots/Rasta community in particular, for historical reasons, are not in favour of that. We are often taught from a young age to keep personal things private and within the family. </p>
-    <p class="text-justify">"We're afraid of what will happen to the perpetrator if we report him. Just because we're experiencing turbulence in the relationship, it doesn't mean we want him hurt, or dead. We only want the abuse to stop. The history of black men and the police is not a good one. We fear reporting our brotha to the police." </p>
+    <blockquote><p class="text-justify">"I have re-coined the phrase 'Honour' based violence to 'Dishonour' based violence to describe the feelings in the grassroots community. This is because there is some similarity to the fact that in certain communities, the worst thing you can do is report a black man to the police. The grassroots/Rasta community in particular, for historical reasons, are not in favour of that. We are often taught from a young age to keep personal things private and within the family." </p></blockquote>
+    <blockquote><p class="text-justify">"We're afraid of what will happen to the perpetrator if we report him. Just because we're experiencing turbulence in the relationship, it doesn't mean we want him hurt, or dead. We only want the abuse to stop. The history of black men and the police is not a good one. We fear reporting our brotha to the police." </p></blockquote>
+    <hr>
 
-
-    <h3>We understand the day-to-day needs of African heritage women</h3>
+    <h2>We understand the day-to-day needs of African heritage women</h2>
     <p class="text-justify">When a black woman washes her hair, it not usually a 10 minute 'wash and go' process that you might find with more manageable European or Asian hair types. Generally speaking, our natural hair texture means that it takes an extended time to wash and dry. If it is unprocessed, our hair will shrink and revert and will have to be plaited, combed or otherwise styled before we can go out. If it's processed or weave, it still has to undergo some type of process before we can 'present'. The wash plait and style process can take hours and usually takes careful planning. </p>
-
     <p class="text-justify">Our skin also takes special treatment and care. After bathing, we must apply special creams or oils to our skins to avoid the dry and 'ashy' appearance. These are day-to- day routines for us, but most people outside our culture don't appear to know this.</p>
-
     <p class="text-justify">What has this to do with domestic abuse? Well, plenty. If you don't know this basic fact about African heritage woman, what do you know? How can you cater for us when you don't know the first thing about us?</p>
-
-    <p class="text-justify">How do you think this would impact on an African heritage woman who has been moved suddenly to a refuge. Where she has not had time to go through the routine that allows her to be presentable and doesn't have access to the products and items she needs to manage her hair and skin. Where the very nice people at the refuge/centre/police station/rape centre/hospital don't understand why she can't present yet. </p>
-
+    <p class="text-justify">How do you think this would impact on an African heritage woman who has been moved suddenly to a refuge? Where she has not had time to go through the routine that allows her to be presentable and doesn't have access to the products and items she needs to manage her hair and skin. Where the very nice people at the refuge/centre/police station/rape centre/hospital don't understand why she can't present yet. </p>
     <p class="text-justify"> This is additional trauma on top of what happened to her.</p>
+    <hr>
 
+    <h2>We understand why there is a lack of faith in the system </h2>
 
-    <h3>We understand why there is a lack of faith in the system </h3>
-
-    <p class="text-justify">Can other organisations deal with the fact that many African heritage people do not have faith in the 'system' for a multitude of reasons including the history of police brutality, slavery and all the other things 'we don't like to talk about'. Many of us are the descendents of those who came here to do the menial jobs that other's didn't want to do. Our parents heard the familiar words and saw in many a window, 'No Irish, No blacks, No dogs'.</p>
+    <p class="text-justify">Can other organisations deal with the fact that many African heritage people do not have faith in the 'system' for a multitude of reasons including the history of police brutality, slavery and all the other things 'we don't like to talk about'? Many of us are the descendents of those who came here to do the menial jobs that other's didn't want to do. Our parents heard the familiar words and saw in many a window, 'No Irish, No blacks, No dogs'.</p>
 
     <p class="text-justify">We remain victims of blatant racism and unconscious bias in institutions where racism is inherent. We do know that things are changing for the better, but in the meantime, people are dying and still refusing to report to institutions because of fear.</p>
 
@@ -136,8 +121,7 @@
 
 
 </div>
-</div>
-</div>
+
 </body>
 
 </html>
