why sistah space fixed2

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <br>
 <div class = "container container-main">
   <div class="row">
-    <div class="col-sm-6 green" id ="our-journey">
+    <div class="col-sm-6" id ="our-journey">
             <div class='inner-column'>
       <div id="col">
 
