--- a/pages/abuse.html
+++ b/pages/abuse.html
@@ -2,25 +2,26 @@
 
 <html>
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <link rel="stylesheet" type="text/css" href="../css/css.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <title > Sistah Space </title>
   <!-- http://www.favicon-generator.org/ -->
 </head>
 
 <body>
- <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar"> 
-  <div class="container"> 
-    <div class="navbar-header"> 
+ <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
+  <div class="container">
+    <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
@@ -37,10 +38,10 @@
             <li><a href="#">Page 3</a></li>
             <li><a href="#">Page 4</a></li>
           </ul>
-        </li>      
+        </li>
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
-            <ul class = "dropdown-menu">  
+            <ul class = "dropdown-menu">
               <li><a href="#"> Advice </a></li>
               <li><a href="#"> Sistah Space Sanctuary </a></li>
               <li><a href="#"> Page 3 </a></li>
@@ -58,9 +59,9 @@
               </ul>
           </li>
         <li><a href=pages/news.html>News</a></li>
-      </ul>  
+      </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
       </ul>
     </div>
   </div>
@@ -70,26 +71,41 @@
 <div class = "container">
  <button class="escape" id="escape">Quickly leave this page</button>
   <div class="social">
-    
+
     <a href=""  > <button class="btn-social" id="facebook">Facebook </button></a>
     <a href=""  > <button class="btn-social" id="twitter">  Twitter</button></a>
   </div>
 
-  <p> Content </p>  
+  <p> Content </p>
 </div>
 
-<
+
+<div class = "jumbotron">
+  <div class = "container">
+
+    <img class = "img-responsive" src="../images/3.JPG" alt="picture">
+      <div class ="text-area">
+        </br>
+        <h2 class = " text-center"> Two women a week are killed by a current or former partner.</h2>   <hr>
+        <h4 class = " text-center">  Many more are left with life changing injuries.</h4> </br>
+      </div>
+  </div>
+</div>
+
 
   <div class="container">
+    <div class="main-copy">
 
-<h2>What is abuse? </h2>
+
+<h2> What is abuse?</h2>
+
+<p class="text-align">Lorem ipsum dolor sit amet, volutpat nam cursus in dictum sed, urna ultrices donec imperdiet ultrices dolor tincidunt, convallis wisi a ornare et, mauris nam urna nunc arcu ut. Sit ridiculus accumsan sed lorem feugiat, leo mi eiusmod, ultricies cum sit. Tempor sed sit, risus purus suscipit, vivamus sollicitudin.</p>
+<p class="text-align"> Ut nulla, class fermentum vitae blandit erat in, cursus suspendisse, non vel in imperdiet justo at. Vehicula felis curabitur viverra pellentesque tempus, velit eu justo dapibus ipsum ultrices congue, ut nec fusce suscipit ipsum fames adipiscing, integer el. Often there are warning signs, but sometimes there are none. </p>
 
 
-<h4>Two women a week are killed by a current or former partner. Many more are left with life changing injuries.</h4>
+<h2> Find out how to spot the warning signs.</h2>
+<p class="text-align">Lorem ipsum dolor sit amet, volutpat nam cursus in dictum sed, urna ultrices donec imperdiet ultrices dolor tincidunt, convallis wisi a ornare et, mauris nam urna nunc arcu ut. Sit ridiculus accumsan sed lorem feugiat, leo mi eiusmod, ultricies cum sit. Tempor sed sit, risus purus suscipit, vivamus sollicitudin.</p>
 
-<h3>Warning signs:</h3>
-
-Often there are warning signs, but sometimes there are none.
 
 <ul>
 	<li>When a woman decides to leave the relationship</li>
@@ -115,6 +131,7 @@ Often there are warning signs, but sometimes there are none.
 	<li>Threatening to reveal something personal about you.</li>
 	<li>Threatening to or harming a family member (children, parent)</li>
 </ul>
+</div>
 </div>
 
 <footer class="footer">
