--- a/pages/abuse.html
+++ b/pages/abuse.html
@@ -106,7 +106,10 @@
 <h2> Find out how to spot the warning signs.</h2>
 <p class="text-align">Lorem ipsum dolor sit amet, volutpat nam cursus in dictum sed, urna ultrices donec imperdiet ultrices dolor tincidunt, convallis wisi a ornare et, mauris nam urna nunc arcu ut. Sit ridiculus accumsan sed lorem feugiat, leo mi eiusmod, ultricies cum sit. Tempor sed sit, risus purus suscipit, vivamus sollicitudin.</p>
 
-
+<div class="container">
+  <div class="row">
+     <div class="col-xs-12 col-xs-4">
+         <h3> If you're concerned you might be affected</h3>
 <ul>
 	<li>When a woman decides to leave the relationship</li>
 	<li>With each pregnancy or child, the situation can become more intense</li>
@@ -119,18 +122,31 @@
 	<li>Does he embarrass you in front of others.</li>
 	<li>Does he blame her for the abuse</li>
 	<li>Is he verbally abusive</li>
-	<li>Does he make threats against you or family members if you report abuse or threaten to leave.</li>
-	<li>Do you change your behaviour to keep the peace.</li>
-	<li>Does the 'vibe' in your house depend on the mood he is in.</li>
-	<li>Does he force you to have sex or do you relent for fear of what may happen if you don't comply</li>
-	<li>Abusive behaviour includes</li>
-	<li>wearing and threatening</li>
-	<li>destroying furniture or your possesions</li>
-	<li>Threatening to report you to immigration (if you don't have leave to remain)</li>
-	<li>Throwing you out of the house</li>
-	<li>Threatening to reveal something personal about you.</li>
-	<li>Threatening to or harming a family member (children, parent)</li>
+
 </ul>
+</div>
+<div class="col-xs-12 col-xs-4 col-xs-offset-1">
+  <h3> If you're concerned about someone else</h3>
+<ul>
+<li>Is he verbally abusive</li>
+<li>Does he make threats against you or family members if you report abuse or threaten to leave.</li>
+<li>Do you change your behaviour to keep the peace.</li>
+<li>Does the 'vibe' in your house depend on the mood he is in.</li>
+<li>Does he force you to have sex or do you relent for fear of what may happen if you don't comply</li>
+<li>Abusive behaviour includes</li>
+<li>wearing and threatening</li>
+<li>destroying furniture or your possesions</li>
+<li>Threatening to report you to immigration (if you don't have leave to remain)</li>
+<li>Throwing you out of the house</li>
+<li>Threatening to reveal something personal about you.</li>
+<li>Threatening to or harming a family member (children, parent)</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+
+
 </div>
 </div>
 
