--- a/pages/abuse.html
+++ b/pages/abuse.html
@@ -103,13 +103,13 @@
 <p class="text-align"> Ut nulla, class fermentum vitae blandit erat in, cursus suspendisse, non vel in imperdiet justo at. Vehicula felis curabitur viverra pellentesque tempus, velit eu justo dapibus ipsum ultrices congue, ut nec fusce suscipit ipsum fames adipiscing, integer el. Often there are warning signs, but sometimes there are none. </p>
 
 
-<h2> Find out how to spot the warning signs.</h2>
+<h2> How to spot the warning signs</h2>
 <p class="text-align">Lorem ipsum dolor sit amet, volutpat nam cursus in dictum sed, urna ultrices donec imperdiet ultrices dolor tincidunt, convallis wisi a ornare et, mauris nam urna nunc arcu ut. Sit ridiculus accumsan sed lorem feugiat, leo mi eiusmod, ultricies cum sit. Tempor sed sit, risus purus suscipit, vivamus sollicitudin.</p>
 
 <div class="container">
   <div class="row">
-     <div class="col-xs-12 col-xs-4">
-         <h3> If you're concerned you might be affected</h3>
+     <div class="col-xs-12 col-xs-5">
+         <h3 class> If you're concerned you might be affected </h3>
 <ul>
 	<li>When a woman decides to leave the relationship</li>
 	<li>With each pregnancy or child, the situation can become more intense</li>
@@ -125,8 +125,9 @@
 
 </ul>
 </div>
-<div class="col-xs-12 col-xs-4 col-xs-offset-1">
-  <h3> If you're concerned about someone else</h3>
+
+<div class="col-xs-12 col-xs-5">
+<h3> If you're concerned about someone else</h3>
 <ul>
 <li>Is he verbally abusive</li>
 <li>Does he make threats against you or family members if you report abuse or threaten to leave.</li>
@@ -145,8 +146,6 @@
 </div>
 </div>
 </div>
-
-
 </div>
 </div>
 
