--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
   <link rel="stylesheet" type="text/css" href="css/css.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="" class="navbar-brand"> LOGO here</a>
+      <a href="index.html" class="navbar-brand"> LOGO here</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -34,9 +32,9 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="pages/our_work.html">Why Sistah Space?</a></li>
-            <li><a href="pages/our_team.html">Our team</a></li>
             <li><a href="pages/abuse.html">What is abuse?</a></li>
-            <li><a href="#">Page 4</a></li>
+            <li><a href="pages/our_team.html">What we do?</a></li> 
+            <li><a href="pages/history.html">Background history</a></li>
           </ul>
         </li>
         <li class = "dropdown">
@@ -212,6 +210,7 @@
 </div> <!--ends container -->
 </div>
 
+</hr>
 
 <div class = "container" >
 
@@ -219,6 +218,7 @@
   <div class="col-sm-12">
     <div class="row m-b-lg">
       <div class="col-sm-8 col-sm-offset-2 text-center">
+       <p>Sistah Space started without any finances at all. It was very hard and we relied heavily on goodwill of our local community and the wider public. We could not have helped so many people without you and we are grateful for your support thus far. These is how you can support us: </p>
         <h3><strong>You can help us by...</strong></h3>
 
       </div>
@@ -268,9 +268,9 @@
 </div>
 </div>
 
-
+  </div>
+</div> <!--ends container -->
 </div>
-
 
 <footer class="footer">
   <div class="container">
