--- a/pages/history.html
+++ b/pages/history.html
@@ -1,15 +1,11 @@
 <head>
+   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
-
-
-  <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:400,500italic' rel='stylesheet' type='text/css'>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="../css/css.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title > Why Sistah Space? </title>
 
 
@@ -17,7 +13,6 @@
 </head>
 
 <body>
-  <div id="our-work">
 
    <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
   <div class="container">
@@ -27,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="" class="navbar-brand"> LOGO here</a>
+      <a href="../index.html" class="navbar-brand"> LOGO here</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -35,10 +30,10 @@
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
-            <li><a href="../pages/our_team.html">Our team</a></li>
+           <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="#">Page 4</a></li>
+            <li><a href="../pages/our_team.html">What we do?</a></li> 
+            <li><a href="../pages/history.html">Background history</a></li>
           </ul>
         </li>
         <li class = "dropdown">
@@ -88,7 +83,7 @@
   </div>
 </div>
 
-<div class = "container">
+<div class = "container main-copy">
 
 <h1>The history</h1>
     <p class="text-justify">Many UK born or raised African heritage people grew up in time when only white men were teachers, head teachers, vicars, bank managers, police. It was almost unheard of for an African heritage woman or man to be a marriage registrar or hold any other similar role. All high profile jobs were predominantly done by white men. In contrast, African heritage people were doing all the menial jobs, like cleaning, factory work and in particular, railway and London Transport jobs.</p>
@@ -108,5 +103,7 @@
   <li>Services not understanding African and Caribbean culture, and therefore not suitable for African heritage survivors.</li>
   <li>Insufficient adequate resources or places that reflect their cultural heritage.</li>
 </ul>
+
+</div>
 
 </div>
