--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 
 <head>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="../css/css.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title > Why Sistah Space? </title>
 
 
@@ -34,9 +33,9 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
-            <li><a href="../pages/our_team.html">Our team</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="../pages/history.html">History</a></li>
+            <li><a href="../pages/our_team.html">What we do?</a></li> 
+            <li><a href="../pages/history.html">Background history</a></li>
           </ul>
         </li>
         <li class = "dropdown">
