--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -32,18 +32,17 @@
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="../pages/our_work.html">Our work</a></li>
+            <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="#">Page 3</a></li>
-            <li><a href="#">Page 4</a></li>
+            <li><a href="../pages/our_team.html">What we do?</a></li> 
+            <li><a href="../pages/history.html">Background history</a></li> 
           </ul>
         </li>      
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
             <ul class = "dropdown-menu">  
-              <li><a href="#"> Advice </a></li>
-              <li><a href="#"> Sistah Space Sanctuary </a></li>
-              <li><a href="#"> Page 3 </a></li>
+              <li><a href="../pages/advice.html"> Advice </a></li>
+              <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li> 
             </ul>
           </li>
 
@@ -52,9 +51,9 @@
         <li class="dropdown">
           <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
             <ul class = "dropdown-menu">
-              <li><a href="#"> Donate </a></li>
-              <li><a href="#"> Volunteer </a></li>
-              <li><a href="#"> Shop </a></li>
+              <li><a href="../pages/donations.html"> Donate </a></li>
+              <li><a href="../pages/volunteer.html"> Volunteer </a></li>
+              <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
         <li><a href=pages/news.html>News</a></li>
