--- a/pages/abuse.html
+++ b/pages/abuse.html
@@ -2,14 +2,12 @@
 
 <html>
 <head>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-  <link rel="stylesheet" type="text/css" href="../css/css.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title > Sistah Space </title>
@@ -25,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="" class="navbar-brand"> LOGO here</a>
+      <a href="../index.html" class="navbar-brand"> LOGO here</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -33,18 +31,17 @@
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="../pages/our_work.html">Our work</a></li>
+            <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="#">Page 3</a></li>
-            <li><a href="#">Page 4</a></li>
+            <li><a href="../pages/our_team.html">What we do?</a></li> 
+            <li><a href="../pages/history.html">Background history</a></li>
           </ul>
         </li>
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
             <ul class = "dropdown-menu">
-              <li><a href="#"> Advice </a></li>
-              <li><a href="#"> Sistah Space Sanctuary </a></li>
-              <li><a href="#"> Page 3 </a></li>
+              <li><a href="../pages/advice.html"> Advice </a></li>
+              <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
             </ul>
           </li>
 
@@ -53,9 +50,9 @@
         <li class="dropdown">
           <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
             <ul class = "dropdown-menu">
-              <li><a href="#"> Donate </a></li>
-              <li><a href="#"> Volunteer </a></li>
-              <li><a href="#"> Shop </a></li>
+              <li><a href="../pages/donations.html"> Donate </a></li>
+              <li><a href="../pages/volunteer.html"> Volunteer </a></li>
+              <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
         <li><a href=pages/news.html>News</a></li>
@@ -68,7 +65,7 @@
 </div>
 </div>
 
-<div class = "container">
+<!-- <div class = "container">
  <button class="escape" id="escape">Quickly leave this page</button>
   <div class="social">
 
@@ -77,7 +74,7 @@
   </div>
 
   <p> Content </p>
-</div>
+</div> -->
 
 
 <div class = "jumbotron">
