--- a/pages/news.html
+++ b/pages/news.html
@@ -2,17 +2,13 @@
 
 <html>
 <head>
+   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
- 
-
-  <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:400,500italic' rel='stylesheet' type='text/css'>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title > Shop to support Sistah Space </title>
 
 
@@ -43,7 +39,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="" class="navbar-brand"> LOGO here</a>
+      <a href="../index.html" class="navbar-brand"> LOGO here</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -51,32 +47,30 @@
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="../pages/our_work.html">Our work</a></li>
+            <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="#">Page 3</a></li>
-            <li><a href="#">Page 4</a></li>
+            <li><a href="../pages/our_team.html">What we do?</a></li> 
+            <li><a href="../pages/history.html">Background history</a></li>  
           </ul>
         </li>      
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
             <ul class = "dropdown-menu">  
-              <li><a href="#"> Advice </a></li>
-              <li><a href="#"> Sistah Space Sanctuary </a></li>
-              <li><a href="#"> Page 3 </a></li>
-            </ul>
+              <li><a href="../pages/advice.html"> Advice </a></li>
+              <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>            </ul>
           </li>
 
 
 
-        <li class="dropdown">
+         <li class="dropdown">
           <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
             <ul class = "dropdown-menu">
-              <li><a href="#"> Donate </a></li>
-              <li><a href="#"> Volunteer </a></li>
-              <li><a href="#"> Shop </a></li>
+              <li><a href="../pages/donations.html"> Donate </a></li>
+              <li><a href="../pages/volunteer.html"> Volunteer </a></li>
+              <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
-        <li><a href=pages/news.html>News</a></li>
+        <li><a href=../pages/news.html>News</a></li>
       </ul>  
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
